Fixes #5932: merge bedwards/5932 16065-16073. display scrollbars in grids. reviewed by Ian.
git-svn-id: http://dev.zenoss.com/svnint/trunk/core@29542 f5df01ce-0320-0410-9ed9-ddcd13c732cc

--- a/Products/ZenUI3/browser/resources/css/zenoss.css
+++ b/Products/ZenUI3/browser/resources/css/zenoss.css
@@ -169,9 +169,6 @@
 /**
  * FILTER GRID
  */
-.x-grid3-scroller {
-    overflow: hidden !important;
-}
 .x-grid3-filter {
     height: 30px;
     background-color: #bdbdbd;
